data/diff_tests/v8/call_indirect_UnreachableCodeExecution_4087.wast
;; 6. **Table Index as Uninitialized Test**:    - **Description**: Attempt to use an uninitialized function reference in the table via `call_indirect`, causing it to trap due to the undefined reference.    - **Constraint**: Verify the check for uninitialized table entries.    - **Unreachable Code**: This traps prior to executing an 'unreachable' instruction.

(assert_invalid
 (module
  (type (func (param i32) (result i32)))
  (table 1 funcref)
  (elem (i32.const 0) $f)
  (func $f (param i32) (result i32) (unreachable))
  (func $test
   (call_indirect (type 0) (i32.const 1))
  )
 )
 "undefined element")